tests/snapshots/keys__keys_btab@002.snap
---
source: tests/keys.rs
description: "input: items [\"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"10\", \"11\", \"12\", \"13\", \"14\",\n\"15\", \"16\", \"17\", \"18\", \"19\", \"20\"]\noptions: \nafter:\n  @key BackTab"
---
"                                                                                "
"                                                                                "
"  20                                                                            "
"  19                                                                            "
"  18                                                                            "
"  17                                                                            "
"  16                                                                            "
"  15                                                                            "
"  14                                                                            "
"  13                                                                            "
"  12                                                                            "
"  11                                                                            "
"  10                                                                            "
"  9                                                                             "
"  8                                                                             "
"  7                                                                             "
"  6                                                                             "
"  5                                                                             "
"  4                                                                             "
"  3                                                                             "
"  2                                                                             "
"> 1                                                                             "
"  20/20                                                                      0/0"
">                                                                               "
cursor: (24, 3)
