tests/snapshots/keys__keys_ctrl_arrows-4.snap
---
source: tests/keys.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/1                                                                        0/0"
"> foo bar |foo-|bar|                                                            "
